--- a/artist-theme.html
+++ b/artist-theme.html
@@ -26,7 +26,7 @@
                 <li><a href="resume.html">Resume</a></li>
             </ul>
         </nav>
-        <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=iNJdPyoqt8U',containment:'body',autoPlay:true, mute:true, startAt:0, opacity:1}"></a>
+        <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=qL7LvWE1Adk&hd=1',containment:'body',autoPlay:true, mute:true, startAt:0, opacity:1}"></a>
         <div class="pattern"></div>
         <div class="big-background-container">
             <h1 class="big-background-title">Artists Theme</h1>
