--- a/artist-theme.html
+++ b/artist-theme.html
@@ -8,7 +8,7 @@
     
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic|Raleway:400,200,300,500,700,600,800,900|Lobster' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/normalize.css" media="all">
-    <link rel="stylesheet" href="css/style.css" media="all">
+    <link rel="stylesheet" href="css/a_style.css" media="all">
     
     <script src="js/jquery-1.11.1.min.js"></script>
     <script src="js/device.min.js"></script> <!--OPTIONAL JQUERY PLUGIN-->
