--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
     <link rel="stylesheet" href="css/normalize.css" media="all">
-    <link rel="stylesheet" href="css/style.css" media="all">
+    <link rel="stylesheet" href="css/v_style.css" media="all">
 
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic|Raleway:400,200,300,500,700,600,800,900' rel='stylesheet' type='text/css'>
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
